module(
    name = "googleapis",
    bazel_compatibility = [">=7.4.0"],
    repo_name = "com_google_googleapis",
)

bazel_dep(
    name = "protobuf",
    version = "25.5",
    repo_name = "com_google_protobuf",
)

imports = use_extension(":extensions.bzl", "imports")
use_repo(imports, "com_google_googleapis_imports")
